# api/gen/go/api/article.pb.go
@@ -722,60 +722,55 @@ var file_api_article_proto_rawDesc = []byte{
 	0x12, 0x34, 0x0a, 0x0c, 0x61, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x4d, 0x65, 0x74, 0x61, 0x73,
 	0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x10, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x72, 0x74,
 	0x69, 0x63, 0x6c, 0x65, 0x4d, 0x65, 0x74, 0x61, 0x52, 0x0c, 0x61, 0x72, 0x74, 0x69, 0x63, 0x6c,
-	0x65, 0x4d, 0x65, 0x74, 0x61, 0x73, 0x32, 0x9f, 0x06, 0x0a, 0x0e, 0x41, 0x72, 0x74, 0x69, 0x63,
+	0x65, 0x4d, 0x65, 0x74, 0x61, 0x73, 0x32, 0xcc, 0x05, 0x0a, 0x0e, 0x41, 0x72, 0x74, 0x69, 0x63,
 	0x6c, 0x65, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x2d, 0x0a, 0x04, 0x50, 0x69, 0x6e,
 	0x67, 0x12, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x0a, 0x2e,
 	0x61, 0x70, 0x69, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x0d, 0x82, 0xd3, 0xe4, 0x93, 0x02,
-	0x07, 0x12, 0x05, 0x2f, 0x70, 0x69, 0x6e, 0x67, 0x12, 0x51, 0x0a, 0x11, 0x41, 0x64, 0x64, 0x4f,
-	0x72, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x12, 0x0b, 0x2e,
-	0x61, 0x70, 0x69, 0x2e, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x1a, 0x0d, 0x2e, 0x61, 0x70, 0x69,
-	0x2e, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x49, 0x44, 0x22, 0x20, 0x82, 0xd3, 0xe4, 0x93, 0x02,
-	0x1a, 0x22, 0x15, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x64, 0x64, 0x4f, 0x72, 0x55, 0x70, 0x64, 0x61,
-	0x74, 0x65, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x3a, 0x01, 0x2a, 0x12, 0x48, 0x0a, 0x0e, 0x44,
-	0x65, 0x6c, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x42, 0x79, 0x4b, 0x65, 0x79, 0x12, 0x0b, 0x2e,
-	0x61, 0x70, 0x69, 0x2e, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x1a, 0x0a, 0x2e, 0x61, 0x70, 0x69,
-	0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x1d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17, 0x22, 0x12,
-	0x2f, 0x76, 0x31, 0x2f, 0x64, 0x65, 0x6c, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x42, 0x79, 0x4b,
-	0x65, 0x79, 0x3a, 0x01, 0x2a, 0x12, 0x60, 0x0a, 0x0f, 0x4c, 0x69, 0x73, 0x74, 0x41, 0x72, 0x74,
-	0x69, 0x63, 0x6c, 0x65, 0x4d, 0x65, 0x74, 0x61, 0x12, 0x17, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4c,
-	0x69, 0x73, 0x74, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x4d, 0x65, 0x74, 0x61, 0x52, 0x65,
-	0x71, 0x1a, 0x17, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x41, 0x72, 0x74, 0x69,
-	0x63, 0x6c, 0x65, 0x4d, 0x65, 0x74, 0x61, 0x52, 0x65, 0x73, 0x22, 0x1b, 0x82, 0xd3, 0xe4, 0x93,
-	0x02, 0x15, 0x12, 0x13, 0x2f, 0x76, 0x31, 0x2f, 0x6c, 0x69, 0x73, 0x74, 0x41, 0x72, 0x74, 0x69,
-	0x63, 0x6c, 0x65, 0x4d, 0x65, 0x74, 0x61, 0x12, 0x3e, 0x0a, 0x09, 0x50, 0x75, 0x74, 0x41, 0x75,
-	0x74, 0x68, 0x6f, 0x72, 0x12, 0x0b, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x75, 0x74, 0x68, 0x6f,
-	0x72, 0x1a, 0x0d, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x49, 0x44,
-	0x22, 0x15, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0f, 0x22, 0x0a, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x75,
-	0x74, 0x68, 0x6f, 0x72, 0x3a, 0x01, 0x2a, 0x12, 0x3a, 0x0a, 0x09, 0x44, 0x65, 0x6c, 0x41, 0x75,
-	0x74, 0x68, 0x6f, 0x72, 0x12, 0x0d, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x75, 0x74, 0x68, 0x6f,
-	0x72, 0x49, 0x44, 0x1a, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22,
-	0x12, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0c, 0x2a, 0x0a, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x75, 0x74,
-	0x68, 0x6f, 0x72, 0x12, 0x42, 0x0a, 0x0a, 0x50, 0x75, 0x74, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c,
-	0x65, 0x12, 0x0c, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x1a,
-	0x0e, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x49, 0x44, 0x22,
-	0x16, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x10, 0x22, 0x0b, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x72, 0x74,
-	0x69, 0x63, 0x6c, 0x65, 0x3a, 0x01, 0x2a, 0x12, 0x44, 0x0a, 0x0a, 0x47, 0x65, 0x74, 0x41, 0x72,
-	0x74, 0x69, 0x63, 0x6c, 0x65, 0x12, 0x0e, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x72, 0x74, 0x69,
-	0x63, 0x6c, 0x65, 0x49, 0x44, 0x1a, 0x0c, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x72, 0x74, 0x69,
-	0x63, 0x6c, 0x65, 0x22, 0x18, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x12, 0x12, 0x10, 0x2f, 0x76, 0x31,
-	0x2f, 0x61, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x12, 0x42, 0x0a,
-	0x0a, 0x44, 0x65, 0x6c, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x12, 0x0e, 0x2e, 0x61, 0x70,
-	0x69, 0x2e, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x49, 0x44, 0x1a, 0x0a, 0x2e, 0x61, 0x70,
-	0x69, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x18, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x12, 0x2a,
-	0x10, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x2f, 0x7b, 0x69, 0x64,
-	0x7d, 0x12, 0x46, 0x0a, 0x0d, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x41, 0x72, 0x74, 0x69, 0x63,
-	0x6c, 0x65, 0x12, 0x0c, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65,
-	0x1a, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x1b, 0x82, 0xd3,
-	0xe4, 0x93, 0x02, 0x15, 0x1a, 0x10, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x72, 0x74, 0x69, 0x63, 0x6c,
-	0x65, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x3a, 0x01, 0x2a, 0x12, 0x4d, 0x0a, 0x0b, 0x4c, 0x69, 0x73,
-	0x74, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x12, 0x13, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4c,
-	0x69, 0x73, 0x74, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x52, 0x65, 0x71, 0x1a, 0x13, 0x2e,
-	0x61, 0x70, 0x69, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x52,
-	0x65, 0x73, 0x22, 0x14, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0e, 0x12, 0x0c, 0x2f, 0x76, 0x31, 0x2f,
-	0x61, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x73, 0x42, 0x2d, 0x5a, 0x2b, 0x67, 0x69, 0x74, 0x68,
-	0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x68, 0x61, 0x74, 0x6c, 0x6f, 0x6e, 0x65, 0x6c, 0x79,
-	0x2f, 0x72, 0x70, 0x63, 0x2d, 0x6f, 0x70, 0x73, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x67, 0x65, 0x6e,
-	0x2f, 0x67, 0x6f, 0x2f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x07, 0x12, 0x05, 0x2f, 0x70, 0x69, 0x6e, 0x67, 0x12, 0x48, 0x0a, 0x0e, 0x44, 0x65, 0x6c, 0x41,
+	0x75, 0x74, 0x68, 0x6f, 0x72, 0x42, 0x79, 0x4b, 0x65, 0x79, 0x12, 0x0b, 0x2e, 0x61, 0x70, 0x69,
+	0x2e, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x1a, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x45, 0x6d,
+	0x70, 0x74, 0x79, 0x22, 0x1d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17, 0x22, 0x12, 0x2f, 0x76, 0x31,
+	0x2f, 0x64, 0x65, 0x6c, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x42, 0x79, 0x4b, 0x65, 0x79, 0x3a,
+	0x01, 0x2a, 0x12, 0x60, 0x0a, 0x0f, 0x4c, 0x69, 0x73, 0x74, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c,
+	0x65, 0x4d, 0x65, 0x74, 0x61, 0x12, 0x17, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4c, 0x69, 0x73, 0x74,
+	0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x4d, 0x65, 0x74, 0x61, 0x52, 0x65, 0x71, 0x1a, 0x17,
+	0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65,
+	0x4d, 0x65, 0x74, 0x61, 0x52, 0x65, 0x73, 0x22, 0x1b, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x15, 0x12,
+	0x13, 0x2f, 0x76, 0x31, 0x2f, 0x6c, 0x69, 0x73, 0x74, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65,
+	0x4d, 0x65, 0x74, 0x61, 0x12, 0x3e, 0x0a, 0x09, 0x50, 0x75, 0x74, 0x41, 0x75, 0x74, 0x68, 0x6f,
+	0x72, 0x12, 0x0b, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x1a, 0x0d,
+	0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x49, 0x44, 0x22, 0x15, 0x82,
+	0xd3, 0xe4, 0x93, 0x02, 0x0f, 0x22, 0x0a, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x75, 0x74, 0x68, 0x6f,
+	0x72, 0x3a, 0x01, 0x2a, 0x12, 0x3a, 0x0a, 0x09, 0x44, 0x65, 0x6c, 0x41, 0x75, 0x74, 0x68, 0x6f,
+	0x72, 0x12, 0x0d, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x75, 0x74, 0x68, 0x6f, 0x72, 0x49, 0x44,
+	0x1a, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x12, 0x82, 0xd3,
+	0xe4, 0x93, 0x02, 0x0c, 0x2a, 0x0a, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x75, 0x74, 0x68, 0x6f, 0x72,
+	0x12, 0x42, 0x0a, 0x0a, 0x50, 0x75, 0x74, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x12, 0x0c,
+	0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x1a, 0x0e, 0x2e, 0x61,
+	0x70, 0x69, 0x2e, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x49, 0x44, 0x22, 0x16, 0x82, 0xd3,
+	0xe4, 0x93, 0x02, 0x10, 0x22, 0x0b, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x72, 0x74, 0x69, 0x63, 0x6c,
+	0x65, 0x3a, 0x01, 0x2a, 0x12, 0x44, 0x0a, 0x0a, 0x47, 0x65, 0x74, 0x41, 0x72, 0x74, 0x69, 0x63,
+	0x6c, 0x65, 0x12, 0x0e, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65,
+	0x49, 0x44, 0x1a, 0x0c, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65,
+	0x22, 0x18, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x12, 0x12, 0x10, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x72,
+	0x74, 0x69, 0x63, 0x6c, 0x65, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x12, 0x42, 0x0a, 0x0a, 0x44, 0x65,
+	0x6c, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x12, 0x0e, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41,
+	0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x49, 0x44, 0x1a, 0x0a, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x45,
+	0x6d, 0x70, 0x74, 0x79, 0x22, 0x18, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x12, 0x2a, 0x10, 0x2f, 0x76,
+	0x31, 0x2f, 0x61, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x2f, 0x7b, 0x69, 0x64, 0x7d, 0x12, 0x46,
+	0x0a, 0x0d, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x12,
+	0x0c, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x1a, 0x0a, 0x2e,
+	0x61, 0x70, 0x69, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x22, 0x1b, 0x82, 0xd3, 0xe4, 0x93, 0x02,
+	0x15, 0x1a, 0x10, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x2f, 0x7b,
+	0x69, 0x64, 0x7d, 0x3a, 0x01, 0x2a, 0x12, 0x4d, 0x0a, 0x0b, 0x4c, 0x69, 0x73, 0x74, 0x41, 0x72,
+	0x74, 0x69, 0x63, 0x6c, 0x65, 0x12, 0x13, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x4c, 0x69, 0x73, 0x74,
+	0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x52, 0x65, 0x71, 0x1a, 0x13, 0x2e, 0x61, 0x70, 0x69,
+	0x2e, 0x4c, 0x69, 0x73, 0x74, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x52, 0x65, 0x73, 0x22,
+	0x14, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x0e, 0x12, 0x0c, 0x2f, 0x76, 0x31, 0x2f, 0x61, 0x72, 0x74,
+	0x69, 0x63, 0x6c, 0x65, 0x73, 0x42, 0x2d, 0x5a, 0x2b, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e,
+	0x63, 0x6f, 0x6d, 0x2f, 0x68, 0x61, 0x74, 0x6c, 0x6f, 0x6e, 0x65, 0x6c, 0x79, 0x2f, 0x72, 0x70,
+	0x63, 0x2d, 0x6f, 0x70, 0x73, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x67, 0x65, 0x6e, 0x2f, 0x67, 0x6f,
+	0x2f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -807,29 +802,27 @@ var file_api_article_proto_depIdxs = []int32{
 	1,  // 0: api.ListArticleRes.articles:type_name -> api.Article
 	8,  // 1: api.ListArticleMetaRes.articleMetas:type_name -> api.ArticleMeta
 	0,  // 2: api.ArticleService.Ping:input_type -> api.Empty
-	5,  // 3: api.ArticleService.AddOrUpdateAuthor:input_type -> api.Author
-	5,  // 4: api.ArticleService.DelAuthorByKey:input_type -> api.Author
-	7,  // 5: api.ArticleService.ListArticleMeta:input_type -> api.ListArticleMetaReq
-	5,  // 6: api.ArticleService.PutAuthor:input_type -> api.Author
-	6,  // 7: api.ArticleService.DelAuthor:input_type -> api.AuthorID
-	1,  // 8: api.ArticleService.PutArticle:input_type -> api.Article
-	2,  // 9: api.ArticleService.GetArticle:input_type -> api.ArticleID
-	2,  // 10: api.ArticleService.DelArticle:input_type -> api.ArticleID
-	1,  // 11: api.ArticleService.UpdateArticle:input_type -> api.Article
-	3,  // 12: api.ArticleService.ListArticle:input_type -> api.ListArticleReq
-	0,  // 13: api.ArticleService.Ping:output_type -> api.Empty
-	6,  // 14: api.ArticleService.AddOrUpdateAuthor:output_type -> api.AuthorID
-	0,  // 15: api.ArticleService.DelAuthorByKey:output_type -> api.Empty
-	9,  // 16: api.ArticleService.ListArticleMeta:output_type -> api.ListArticleMetaRes
-	6,  // 17: api.ArticleService.PutAuthor:output_type -> api.AuthorID
-	0,  // 18: api.ArticleService.DelAuthor:output_type -> api.Empty
-	2,  // 19: api.ArticleService.PutArticle:output_type -> api.ArticleID
-	1,  // 20: api.ArticleService.GetArticle:output_type -> api.Article
-	0,  // 21: api.ArticleService.DelArticle:output_type -> api.Empty
-	0,  // 22: api.ArticleService.UpdateArticle:output_type -> api.Empty
-	4,  // 23: api.ArticleService.ListArticle:output_type -> api.ListArticleRes
-	13, // [13:24] is the sub-list for method output_type
-	2,  // [2:13] is the sub-list for method input_type
+	5,  // 3: api.ArticleService.DelAuthorByKey:input_type -> api.Author
+	7,  // 4: api.ArticleService.ListArticleMeta:input_type -> api.ListArticleMetaReq
+	5,  // 5: api.ArticleService.PutAuthor:input_type -> api.Author
+	6,  // 6: api.ArticleService.DelAuthor:input_type -> api.AuthorID
+	1,  // 7: api.ArticleService.PutArticle:input_type -> api.Article
+	2,  // 8: api.ArticleService.GetArticle:input_type -> api.ArticleID
+	2,  // 9: api.ArticleService.DelArticle:input_type -> api.ArticleID
+	1,  // 10: api.ArticleService.UpdateArticle:input_type -> api.Article
+	3,  // 11: api.ArticleService.ListArticle:input_type -> api.ListArticleReq
+	0,  // 12: api.ArticleService.Ping:output_type -> api.Empty
+	0,  // 13: api.ArticleService.DelAuthorByKey:output_type -> api.Empty
+	9,  // 14: api.ArticleService.ListArticleMeta:output_type -> api.ListArticleMetaRes
+	6,  // 15: api.ArticleService.PutAuthor:output_type -> api.AuthorID
+	0,  // 16: api.ArticleService.DelAuthor:output_type -> api.Empty
+	2,  // 17: api.ArticleService.PutArticle:output_type -> api.ArticleID
+	1,  // 18: api.ArticleService.GetArticle:output_type -> api.Article
+	0,  // 19: api.ArticleService.DelArticle:output_type -> api.Empty
+	0,  // 20: api.ArticleService.UpdateArticle:output_type -> api.Empty
+	4,  // 21: api.ArticleService.ListArticle:output_type -> api.ListArticleRes
+	12, // [12:22] is the sub-list for method output_type
+	2,  // [2:12] is the sub-list for method input_type
 	2,  // [2:2] is the sub-list for extension type_name
 	2,  // [2:2] is the sub-list for extension extendee
 	0,  // [0:2] is the sub-list for field type_name
